:ant: fix: plantuml url

--- a/content/article/2019-05-08-asciidoc-plantuml-vscode.adoc
+++ b/content/article/2019-05-08-asciidoc-plantuml-vscode.adoc
@@ -6,7 +6,7 @@ draft: false
 author: anoff
 featuredImage: /assets/asciidoc-plantuml/title.png
 ---
-:plantuml-server-url: http://plantuml.com/plantuml
+:plantuml-server-url: https://www.plantuml.com/plantuml
 :imagesdir: /assets/asciidoc-plantuml/
 :imagesoutdir: _site/assets/asciidoc-plantuml/
 
