--- a/content/code/2019-04-08-cv-continuous-vitae.adoc
+++ b/content/code/2019-04-08-cv-continuous-vitae.adoc
@@ -6,7 +6,7 @@ author: anoff
 draft: false
 featuredImage: /assets/continuous-cv/logo.png
 ---
-:plantuml-server-url: http://plantuml.com/plantuml
+:plantuml-server-url: https://www.plantuml.com/plantuml
 :outdir: _site
 :imagesdir: /assets/continuous-cv/
 :imagesoutdir: _site/assets/continuous-cv/
