--- a/content/code/2019-08-24-drone-ci-travis-ci-to-azure-pipelines.adoc
+++ b/content/code/2019-08-24-drone-ci-travis-ci-to-azure-pipelines.adoc
@@ -9,7 +9,7 @@ featuredImage: /assets/azure-pipelines/title.png
 ---
 :imagesdir: /assets/azure-pipelines/
 :imagesoutdir: _site/assets/azure-pipelines/
-:plantuml-server-url: https://www.plantuml.com/plantuml
+:plantuml-server-url: http://www.plantuml.com/plantuml
 :source-highlighter: coderay
 :sectlinks:
 
